<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NotificationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:clipToPadding="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bg_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/back_notif"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/button"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/notifications" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/change_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_alarm"
            android:layout_margin="16dp"
            android:text="@string/daily_reminder"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimarySoft"
            android:textSize="16sp"
            android:layout_marginTop="44dp"
            android:textAlignment="textStart"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="16dp"
            android:text="@string/overview_daily_reminder"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/daily_remind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:layout_margin="16dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_new_releases"
            android:layout_margin="16dp"
            android:text="@string/released_reminder"/>

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimarySoft"
            android:textSize="16sp"
            android:layout_marginTop="44dp"
            android:textAlignment="textStart"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="16dp"
            android:text="@string/overview_released_reminder"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/released_remind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:layout_margin="16dp" />

    </androidx.cardview.widget.CardView>
</RelativeLayout>