<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back_more"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/button"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/title_activity_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/title" />
        </LinearLayout>

        <SearchView
            android:id="@+id/search_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintCircleRadius="5dp"
            android:background="@color/colorGrey"
            android:queryHint="@string/placeholder"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <FrameLayout
            android:id="@+id/container_more"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_more"
            app:layout_constraintVertical_bias="0.0">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                tools:listitem="@layout/item_list" />
        </FrameLayout>

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/loadingMore"
            style="@style/AVLoadingIndicatorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="320dp"
            android:visibility="visible"
            app:indicatorName="LineScalePulseOutIndicator"
            app:indicatorColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/more_btn_activity"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/karla"
            android:drawablePadding="8dp"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_arrow_down"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_more"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>