<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back_more_result"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/button"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/title_result1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/title_result2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/title" />
        </LinearLayout>

        <TextView
            android:id="@+id/label_search_result_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            android:textSize="14sp"
            android:text="@string/label_result"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

        <TextView
            android:id="@+id/tv_result_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            tools:text="@string/tv_result"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@+id/label_search_result_more"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:paddingTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_search_result_more">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rv_result_more"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingBottom="8dp"
                tools:listitem="@layout/item_list"
                android:orientation="vertical"/>
        </FrameLayout>

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/loadingMore"
            style="@style/AVLoadingIndicatorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="320dp"
            android:visibility="visible"
            app:indicatorName="LineScalePulseOutIndicator"
            app:indicatorColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>